// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Start /> Should renders 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="font__mono sc-htoDjs hqoneH"
  >
    <div
      className="font__mono sc-bwzfXH cPNnSe"
    >
      <div
        className="sc-htpNat hCfKcM"
      >
        edloidas production
      </div>
      <div
        className="sc-bxivhb lUHxl"
      >
        Penta Project
      </div>
      <div
        className="sc-ifAKCX LmHhu"
      >
        A Cyberpunk Action Game
      </div>
    </div>
    <div
      className="sc-dnqmqq dsZHde"
    >
      <ul
        className="sc-EHOje hTaJON"
      >
        <li
          className="sc-bZQynM kjQUrH"
        />
        <li
          className="sc-bZQynM jTHtRk"
        />
        <li
          className="sc-bZQynM frRrCA"
        />
        <li
          className="sc-bZQynM KEZJa"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Start /> Should switch to Await loader 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="font__mono sc-htoDjs hqoneH"
  >
    <div
      className="font__mono sc-bwzfXH cPNnSe"
    >
      <div
        className="sc-htpNat hCfKcM"
      >
        edloidas production
      </div>
      <div
        className="sc-bxivhb lUHxl"
      >
        Penta Project
      </div>
      <div
        className="sc-ifAKCX LmHhu"
      >
        A Cyberpunk Action Game
      </div>
    </div>
    <div
      className="sc-dnqmqq dsZHde"
    >
      <button
        autoFocus={true}
        className="font__mono sc-gzVnrw HhbST"
      >
        Press Any Key
      </button>
    </div>
  </div>
</div>
`;
